# Kitchen

./: .env  .env.example  .gitignore  main.py  pyproject.toml  requirements.txt  start_api.sh
Brainstorming/: .env  README.md  app.py  brainstorming.py  requirements.txt  soundtest.py  start_backend.py  test_audio_fix.py  test_backend.py  test_backend_updated.py  test_complete_integration.py  test_cors_comprehensive.py  test_cors_fix.py  test_exact_flow.py  test_exact_requirements.py  test_fix.py  test_frontend_integration.py  test_integration.py  test_voice_flow.py
Brainstorming/output/frontend/: index.html
agents/: backend.py  frontend.py  manager.py
backend/manager_node/: __init__.py  prompt_processor.py
backend/manager_node/models/: __init__.py  (+3 more)
backend/multi_model_block/: __init__.py  config.py  gemini_client.py
codegen/: validators.py  writer.py
codegen/templates/: Dockerfile.backend.j2  api.js.j2  db.py.j2  form.html.j2  index.html.j2  list.html.j2  main.py.j2  models.py.j2  router.py.j2  schemas.py.j2  seed.py.j2  styles.css.j2
frontend/: COMPLETE_VOICE_FLOW_GUIDE.md  package-lock.json  package.json  test_voice_integration.md
frontend/src/: App.jsx  index.css
orchestrator/: main.py  models.py  mount_app.py  pipeline.py  requirements.txt
orchestrator/agents/: backend.py  frontend.py  manager.py
orchestrator/codegen/: validators.py  writer.py
orchestrator/providers/: gemini.py
orchestrator/storage/: jobs.py
output/backend/: main.py  models.py
output/frontend/: index.html
providers/: brainstorming_utils.py  config.py  gemini.py
(+19 files in other folders)
