[project]
name = "kitchen"
version = "version 1"
description = "best app ever"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "n/a"}
readme = "README.md"
requires-python = "y"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
